支持存储初始化方法相关切点的信息。 主要解决需要流量才能触发的一些中间件的支持，比如 MQ，比如某些缓存